# spider_adaptation_CPG

./: README.md
adaptation_algorithm/: CMakeLists.txt  package.xml
adaptation_algorithm/include/: adaptation.h
adaptation_algorithm/src/: main.cpp
adaptation_multi_armed_bandit/: CMakeLists.txt  package.xml
adaptation_multi_armed_bandit/scripts/: bandit_adaptation.py
hello_world/: CMakeLists.txt  package.xml
hello_world/src/: main.cpp
hexapod_control_gazebo/: README.md
hexapod_controller/: README.md
hexapod_controller/include/: control.h  gait.h  ik.h  servo_driver.h
hexapod_controller/src/: gait.cpp  hexapod_controller.cpp  ik.cpp
hexapod_msgs/: CMakeLists.txt
hexapod_msgs/srv/: CheckGait.srv  MoveFeetLearning.srv
move_feet/include/: move_feet.h
move_feet/src/: move_feet.cpp
move_feet_adaptation/: CMakeLists.txt  package.xml
move_feet_adaptation/config/: param_move_feet.yaml
move_feet_adaptation/include/: move_feet.h
move_feet_adaptation/src/: main_node.cpp  move_feet.cpp
multi_armed_bandit/: CMakeLists.txt  package.xml
multi_armed_bandit/scripts/: bandit.py
reinforcement_learning/: CMakeLists.txt
reinforcement_learning/config/: reinforcement_learning_param.yaml  reward.yaml
reinforcement_learning/include/: reinforcement_learning.h
reinforcement_learning/src/: main.cpp
reinforcement_learning_shooter/: CMakeLists.txt  package.xml
reinforcement_learning_shooter/include/: matrix.h  reinforcement_learning.h
reinforcement_learning_shooter/src/: main.cpp
spider_description/: README.md
spider_gazebo/: README.md
(+30 files in other folders)
